controllers folder created

--- a/views/loginStudent.ejs
+++ b/views/loginStudent.ejs
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Login Student</h1>
+    <form action="/student/dashboard" method="post">
+        <input type="text" placeholder="Email" name="email">
+        <input type="text" placeholder="Password"  name="password">
+        <button type="submit">Sign In</button>
+    </form>
 </body>
 </html>
