--- a/views/loginStaff.ejs
+++ b/views/loginStaff.ejs
@@ -7,12 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Student Sign up page</h1>
-    <form action="/student/signup" method="post">
-        <input type="text" placeholder="Full Name" name="fullname">
+    <h1>Login Staff</h1>
+    <form action="/staff/dashboard" method="post">
         <input type="text" placeholder="Email" name="email">
         <input type="text" placeholder="Password"  name="password">
-        <button type="submit">Sign Up</button>
+        <button type="submit">Sign In</button>
     </form>
 </body>
 </html>
