--- a/views/signupStaff.ejs
+++ b/views/signupStaff.ejs
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Staff Sign up page</h1>
+    <form action="/staff/signup" method="post">
+        <input type="text" placeholder="Full Name" name="fullname">
+        <input type="text" placeholder="Email" name="email">
+        <input type="text" placeholder="Password"  name="password">
+        <button type="submit">Sign Up</button>
+    </form>
 </body>
 </html>
